cmake_minimum_required(VERSION 3.14)
project(Offer_Cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(1 1.二维数组中的查找.cpp)
add_executable(2 2.替换空格.cpp)
add_executable(3 3.从尾到头打印链表.cpp)
add_executable(4 4.重建二叉树.cpp)
add_executable(5 5.用两个栈实现队列.cpp)
add_executable(6 6.旋转数组的最小数字.cpp)
add_executable(7 7.斐波那契数列.cpp)
add_executable(8 8.跳台阶.cpp)
add_executable(9 9.变态跳台阶.cpp)
add_executable(10 10.矩形覆盖.cpp)
add_executable(11 11.二进制中1的个数.cpp)
add_executable(12 12.数值的整数次方.cpp)
add_executable(13 13.调整数组顺序使奇数位于偶数前面.cpp)
add_executable(14 14.链表中倒数第k个结点.cpp)
add_executable(15 15.反转链表.cpp)
add_executable(16 16.合并两个排序的链表.cpp)
add_executable(17 17.树的子结构.cpp)
add_executable(18 18.二叉树的镜像.cpp)
add_executable(19 19.顺时针打印矩阵.cpp)
add_executable(20 20.包含min函数的栈.cpp)
add_executable(21 21.栈的压入、弹出序列.cpp)
add_executable(22 22.从上往下打印二叉树.cpp)
add_executable(23 23.二叉搜索树的后序遍历序列.cpp)
add_executable(24 24.二叉树中和为某一值的路径.cpp)
add_executable(25 25.复杂链表的复制.cpp)
add_executable(26 26.二叉搜索树与双向链表.cpp)
add_executable(27 27.字符串的排列.cpp)
add_executable(28 28.数组中出现次数超过一半的数字.cpp)
add_executable(29 29.最小的K个数.cpp)
add_executable(30 30.连续子数组的最大和.cpp)
add_executable(31 31.整数中1出现的次数（从1到n整数中1出现的次数）.cpp)
add_executable(32 32.把数组排成最小的数.cpp)
add_executable(33 33.丑数.cpp)
#add_executable(34 34.第一个只出现一次的字符.cpp)
#add_executable(35 35.数组中的逆序对.cpp)
#add_executable(36 36.两个链表的第一个公共结点.cpp)
#add_executable(37 37.数字在排序数组中出现的次数.cpp)
#add_executable(38 38.二叉树的深度.cpp)
#add_executable(39 39.平衡二叉树.cpp)
#add_executable(40 40.数组中只出现一次的数字.cpp)
#add_executable(41 41.和为S的连续正数序列.cpp)
#add_executable(42 42.和为S的两个数字.cpp)
#add_executable(43 43.左旋转字符串.cpp)
#add_executable(44 44.翻转单词顺序列.cpp)
#add_executable(45 45.扑克牌顺子.cpp)
#add_executable(46 46.孩子们的游戏(圆圈中最后剩下的数).cpp)
#add_executable(47 47.求1+2+3+...+n.cpp)
#add_executable(48 48.不用加减乘除做加法.cpp)
#add_executable(49 49.把字符串转换成整数.cpp)
#add_executable(50 50.数组中重复的数字.cpp)
#add_executable(51 51.构建乘积数组.cpp)
#add_executable(52 52.正则表达式匹配.cpp)
#add_executable(53 53.表示数值的字符串.cpp)
#add_executable(54 54.字符流中第一个不重复的字符.cpp)
#add_executable(55 55.链表中环的入口结点.cpp)
#add_executable(56 56.删除链表中重复的结点.cpp)
#add_executable(57 57.二叉树的下一个结点.cpp)
#add_executable(58 58.对称的二叉树.cpp)
#add_executable(59 59.按之字形顺序打印二叉树.cpp)
#add_executable(60 60.把二叉树打印成多行.cpp)
#add_executable(61 61.序列化二叉树.cpp)
#add_executable(62 62.二叉搜索树的第k个结点.cpp)
#add_executable(63 63.数据流中的中位数.cpp)
#add_executable(64 64.滑动窗口的最大值.cpp)
#add_executable(65 65.矩阵中的路径.cpp)
#add_executable(66 66.机器人的运动范围.cpp)
#add_executable(67 67.剪绳子.cpp)